vpc/route-table.tf
resource "aws_route_table" "r" {
  vpc_id = "${aws_vpc.transit-gateway-vpc.id}"


  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = "${aws_internet_gateway.gw.id}"
  }

  tags = {
    Name = "aquis-terraform-boto3-transit-gateway-rt"
  }
}
resource "aws_main_route_table_association" "a" {
  vpc_id         = "${aws_vpc.transit-gateway-vpc.id}"
  route_table_id = "${aws_route_table.r.id}"
}
